src/test/ui/malformed/malformed-plugin-3.stderr
error[E0498]: malformed `plugin` attribute
  --> $DIR/malformed-plugin-3.rs:2:1
   |
LL | #![plugin(foo="bleh")]
   | ^^^^^^^^^^^^^^^^^^^^^^ malformed attribute

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/issues/29597
  --> $DIR/malformed-plugin-3.rs:2:1
   |
LL | #![plugin(foo="bleh")]
   | ^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

