src/test/ui/malformed/malformed-plugin-3.rs
#![feature(plugin)]
#![plugin(foo="bleh")] //~ ERROR malformed `plugin` attribute

fn main() {}
